--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -15,18 +15,18 @@
         </ul>
       </div>
     </nav>
-    
+
     <div class="home"> <!-- Just tempory, to fill up the website -->
       <h2>Hot Items</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-        Interdum velit euismod in pellentesque massa placerat. Mauris augue 
-        neque gravida in fermentum et. Nam aliquam sem et tortor. Accumsan 
-        tortor posuere ac ut consequat semper viverra nam libero. 
-        Eu volutpat odio facilisis mauris sit amet massa vitae. 
-        Ac tortor dignissim convallis aenean et tortor at risus viverra. 
-        Arcu dui vivamus arcu felis. Tempus quam pellentesque nec nam aliquam sem et. 
-        Ac tortor vitae purus faucibus ornare suspendisse sed nisi. Morbi blandit cursus risus at ultrices. 
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        Interdum velit euismod in pellentesque massa placerat. Mauris augue
+        neque gravida in fermentum et. Nam aliquam sem et tortor. Accumsan
+        tortor posuere ac ut consequat semper viverra nam libero.
+        Eu volutpat odio facilisis mauris sit amet massa vitae.
+        Ac tortor dignissim convallis aenean et tortor at risus viverra.
+        Arcu dui vivamus arcu felis. Tempus quam pellentesque nec nam aliquam sem et.
+        Ac tortor vitae purus faucibus ornare suspendisse sed nisi. Morbi blandit cursus risus at ultrices.
         Blandit volutpat maecenas volutpat blandit aliquam etiam. </p>
     </div>
     <footer>
