fixed visual bug of navbar where it was not at the top, added a box shadow, made it a sticky nav bar

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -7,9 +7,7 @@
   </head>
   <body>
     
-    <!-- We'll first be needing to add items to the nav bar (So what we plan on doing this first sprint meeting) -->
     <nav>
-      
       <div class ="container">
         <a href="" class="init">
           <h1>Triple B</h1>
