added hover animation for nav bar, category grid template, list grid template

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
       <div class ="container">
         <a href="" class="init">
-          <h1>Triple B</h1>
+          <h1>Logo</h1>
           <ul class="nav-right">
             <li><a href=""  class="underline">Search</a></li>
             <li><a href=""  class="underline">Listings</a></li>
@@ -20,19 +20,77 @@
         </a>
       </div>
     </nav>
-    
-    <div class="home"> <!-- Just tempory, to fill up the website -->
-      <h2>Hot Items</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-        Interdum velit euismod in pellentesque massa placerat. Mauris augue 
-        neque gravida in fermentum et. Nam aliquam sem et tortor. Accumsan 
-        tortor posuere ac ut consequat semper viverra nam libero. 
-        Eu volutpat odio facilisis mauris sit amet massa vitae. 
-        Ac tortor dignissim convallis aenean et tortor at risus viverra. 
-        Arcu dui vivamus arcu felis. Tempus quam pellentesque nec nam aliquam sem et. 
-        Ac tortor vitae purus faucibus ornare suspendisse sed nisi. Morbi blandit cursus risus at ultrices. 
-        Blandit volutpat maecenas volutpat blandit aliquam etiam. </p>
+    <!-- hero -->
+    <div class="hero">
+      <div class="para-cont"> 
+        <div class="parallax">
+          <h1>Welcome</h1>
+        </div>
+      </div>
+    </div>
+    <!-- First View -->
+    <div class="category-section">
+      <div class="mix-grid">
+        <div class="nested">
+          <h3>Genre 1</h3>
+          <p>Lorem ipsum dolor sit amet.</p>
+          <p>Lorem ipsum dolor sit amet.</p>
+          <p>Lorem ipsum dolor sit amet.</p>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="nested">
+          <h3>Genre 1</h3>
+          <p>Lorem ipsum dolor sit amet.</p>
+          <p>Lorem ipsum dolor sit amet.</p>
+          <p>Lorem ipsum dolor sit amet.</p>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="nested">
+          <h3>Genre 1</h3>
+          <p>Lorem ipsum dolor sit amet.</p>
+          <p>Lorem ipsum dolor sit amet.</p>
+          <p>Lorem ipsum dolor sit amet.</p>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- List sections -->
+
+    <div class="list-section">
+      <h2>Computer Science Books</h2>
+      <div class="scroller-grid">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
+      </div>
+    </div>
+
+    <div class="list-section">
+      <h2>Chemistry Books</h2>
+      <div class="scroller-grid">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
+      </div>
+    </div>
+
+    <div class="list-section">
+      <h2>Geology Books</h2>
+      <div class="scroller-grid">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
+      </div>
     </div>
     <footer>
 
