added interactive home, profile, login page

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
           <ul class="nav-right">
             <li><a href=""  class="underline">Search</a></li>
             <li><a href=""  class="underline">Listings</a></li>
-            <li><a href=""  class="underline">Profile</a></li>
-            <li><a href="" class="action">Log In</a></li>
+            <li><a href="profile.html"  class="underline">Profile</a></li>
+            <li><a href="login.html" class="action">Log In</a></li>
           </ul>
         </a>
       </div>
