--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="" class="init">
           <h1>Logo</h1>
           <ul class="nav-right">
-            <li><a href=""  class="underline">Search</a></li>
+            <li><a href="browse.html"  class="underline">Search</a></li>
             <li><a href=""  class="underline">Listings</a></li>
             <li><a href="profile.html"  class="underline">Profile</a></li>
             <li><a href="login.html" class="action">Log In</a></li>
