final demo1 project

--- a/browse.html
+++ b/browse.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="styles.css">
     <style>
       * {box-sizing:border-box;}
     .column{
@@ -43,12 +44,18 @@
     <h1>Categories</h1>
     <!-- We'll first be needing to add items to the nav bar (So what we plan on doing this first sprint meeting) -->
     <nav>
-      <div class ="container">
-        <ul class="nav-right">
-          <!-- Add your button names here, additionally change how it looks in css -->
-        </ul>
-      </div>
-    </nav>
+        <div class ="container">
+          <a href="index.html" class="init">
+            <h1>Logo</h1>
+            <ul class="nav-right">
+              <li><a href="browse.html"  class="underline">Browse</a></li>
+              <li><a href="listing.html"  class="underline">Listings</a></li>
+              <li><a href="profile.html"  class="underline">Profile</a></li>
+              <li><a href="login.html" class="action">Log In</a></li>
+            </ul>
+          </a>
+        </div>
+      </nav>
     
     <div class="row"> <!-- Just tempory, to fill up the website -->
       <div class = "column">
