--- a/contacts.html
+++ b/contacts.html
@@ -7,12 +7,17 @@
   </head>
   <body>
     <h1>Tripple B, CS students save the bookstore</h1>
-    <!-- We'll first be needing to add items to the nav bar (So what we plan on doing this first sprint meeting) -->
     <nav>
       <div class ="container">
-        <ul class="nav-right">
-          <!-- Add your button names here, additionally change how it looks in css -->
-        </ul>
+        <a href="index.html" class="init">
+          <h1>Logo</h1>
+          <ul class="nav-right">
+            <li><a href="browse.html"  class="underline">Browse</a></li>
+            <li><a href="listing.html"  class="underline">Listings</a></li>
+            <li><a href="profile.html"  class="underline">Profile</a></li>
+            <li><a href="login.html" class="action">Log In</a></li>
+          </ul>
+        </a>
       </div>
     </nav>
 
