--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     
     <nav>
       <div class ="container">
-        <a href="" class="init">
+        <a href="index.html" class="init">
           <h1>Logo</h1>
           <ul class="nav-right">
-            <li><a href="browse.html"  class="underline">Search</a></li>
+            <li><a href="browse.html"  class="underline">Browse</a></li>
             <li><a href="listing.html"  class="underline">Listings</a></li>
             <li><a href="profile.html"  class="underline">Profile</a></li>
             <li><a href="login.html" class="action">Log In</a></li>
