added button to send us to message page

--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
       </div>
     </div>
+
+    <div class="messages">
+      <a href="message.html">M</a>
+    </div>
+
     <footer>
 
     </footer>
