--- a/message.html
+++ b/message.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="message.css">
     <title>Messages</title>
 </head>
 <body>
-    <nav>
+      <nav>
         <div class ="container">
           <a href="index.html" class="init">
             <h1>Logo</h1>
@@ -21,5 +21,21 @@
           </a>
         </div>
       </nav>
+      <div class="chat-field">
+        <!-- <div class="chat-warpper"> -->
+          <div class="messages">
+            <p> a </p>
+            <p> </p>
+            <p> </p>
+            <p> </p>
+          </div>
+        <!-- </div> -->
+      </div>
+      <div class="input-field">
+        <div class="input">
+          <input type="text" name="" placeholder="send message">
+          <button class="send"> Send </button>
+        </div>
+      </div>
 </body>
 </html>
