modified css on home page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Triple-B</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="nav-styles.css">
   </head>
   
   <body>
@@ -25,11 +26,7 @@
 
     <!-- hero -->
     <div class="hero">
-      <div class="para-cont"> 
-        <div class="parallax">
-          <h1>Welcome</h1>
-        </div>
-      </div>
+        <h1>Welcome</h1>
     </div>
     <!-- First View -->
     <div class="category-section">
