--- a/browse.html
+++ b/browse.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="styles.css">
+    <!-- <link rel="stylesheet" href="styles.css"> -->
+    <link rel="stylesheet" href="nav-styles.css">
     <style>
       * {box-sizing:border-box;}
     .column{
@@ -36,7 +37,7 @@
     }
   </style>
   <title>Browsing</title>
-  <link rel="stylesheet" href="styles.css">
+  <!-- <link rel="stylesheet" href="styles.css"> -->
   </head>
 
   <body>
