--- a/listing.html
+++ b/listing.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Tripple B Listing</title>
     <link rel="stylesheet" href="listing.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="nav-styles.css">
   </head>
   <nav>
     <div class ="container">
