--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Tripple B Login</title>
     <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="nav-styles.css">
   </head>
   <body>
     <h1>Tripple B, CS students save the bookstore</h1>
