--- a/profile.html
+++ b/profile.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Triple-B</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="nav-styles.css">
   </head>
   <body>
     <h1>Your Profile</h1>
