added button to send us to message page (#45)
* added button to send us to message page

* made skeleton of chat field

* modified css on home page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Triple-B</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="nav-styles.css">
   </head>
   
   <body>
@@ -25,11 +26,7 @@
 
     <!-- hero -->
     <div class="hero">
-      <div class="para-cont"> 
-        <div class="parallax">
-          <h1>Welcome</h1>
-        </div>
-      </div>
+        <h1>Welcome</h1>
     </div>
     <!-- First View -->
     <div class="category-section">
@@ -95,6 +92,11 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
       </div>
     </div>
+
+    <div class="messages">
+      <a href="message.html">M</a>
+    </div>
+
     <footer>
 
     </footer>
