--- a/browse.html
+++ b/browse.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="styles.css">
     <!-- <link rel="stylesheet" href="styles.css"> -->
     <link rel="stylesheet" href="nav-styles.css">
     <style>
@@ -58,6 +59,12 @@
         </div>
       </nav>
     
+      <!--Search Bar-->
+     <form id = "form">
+      <input type ="search" id="query" name="q" placeholder="Search..." aria-label = "Search through site content">
+      <button>Search</button>
+    </form>
+
     <div class="row"> <!-- Just tempory, to fill up the website -->
       <div class = "column">
       <div class ="card">
