Updated login HTML

--- a/login.html
+++ b/login.html
@@ -4,21 +4,15 @@
     <meta charset="utf-8">
     <title>Tripple B Login</title>
     <link rel="stylesheet" href="login.css">
-    <link rel="stylesheet" href="nav-styles.css">
   </head>
   <body>
     <h1>Tripple B, CS students save the bookstore</h1>
+    <!-- We'll first be needing to add items to the nav bar (So what we plan on doing this first sprint meeting) -->
     <nav>
       <div class ="container">
-        <a href="index.html" class="init">
-          <h1>Logo</h1>
-          <ul class="nav-right">
-            <li><a href="browse.html"  class="underline">Browse</a></li>
-            <li><a href="listing.html"  class="underline">Listings</a></li>
-            <li><a href="profile.html"  class="underline">Profile</a></li>
-            <li><a href="login.html" class="action">Log In</a></li>
-          </ul>
-        </a>
+        <ul class="nav-right">
+          <!-- Add your button names here, additionally change how it looks in css -->
+        </ul>
       </div>
     </nav>
 
@@ -28,6 +22,59 @@
       </p>
     </div>
 
+
+    <div class="RightColumn">
+
+    <!-- begin UPPER RIGHT box -->
+                <div class="VisuallyHidden" id="upperRight" role="navigation" aria-labelledby="upperRight">
+                   <h2>Login Box</h2>
+                </div>
+                <div class="LoginBox" id="content" role="main">
+
+<!-- begin login form -->
+               <form name="loginForm" action="/idp/profile/SAML2/Redirect/SSO?execution=e3s1" method="post" id="Form1" role="form">
+
+                     <div class="form-element-wrapper">
+Login
+                     </div>
+
+                  <div class="form-element-wrapper">
+                     <label for="username">Username</label>
+                     <input class="LoginTextBox" id="username" name="j_username" type="text" size="20" value="" autofocus="">
+                  </div>
+
+                  <div id="UsernameAlert" class="Alert" style="display: none;">
+                     Your username is the name before the '@' in your CSUF email address.
+                     <br>
+                     <a href="https://my.fullerton.edu/Accounts" class="LoginBoxAlert">Forgot your username?</a>
+                  </div>
+                  <div id="NewUserAlert" class="Alert" style="display: none;">
+                     Please click the link below to create your campus account.
+                     <br>
+                     <a href="https://my.fullerton.edu/Accounts/StudentRegistration" class="LoginBoxAlert">Create my campus account</a>
+                  </div>
+                  <div class="form-element-wrapper">
+                     <label for="password">Password</label>
+                     <input class="LoginTextBox" id="password" name="j_password" type="password" size="20" value="">
+                  </div>
+
+                  <div class="form-element-wrapper">
+                     <button class="LoginButton" type="submit" name="_eventId_proceed">Login</button>
+                  </div>
+
+               </form>
+<!-- end login form -->
+
+               <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="Help">Need help logging in?</a>
+
+
+            </div>
+
+
+
+
+
+<!--
     <div class="container">
    <label for="uname"><b>Username</b></label>
    <input type="text" placeholder="Enter Username" name="uname" required>
@@ -40,6 +87,30 @@
      <input type="checkbox" checked="checked" name="remember"> Remember me
    </label>
   </div>
+-->
+
+  <div class="chat-popup" id="myForm">
+  <form action="/action_page.php" class="form-container">
+    <h1>Chat</h1>
+
+    <label for="msg"><b>Message</b></label>
+    <textarea placeholder="Type message.." name="msg" required></textarea>
+
+    <button type="submit" class="btn">Send</button>
+    <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+  </form>
+
+  <script>
+  function openForm() {
+  document.getElementById("myForm").style.display = "block";
+}
+
+function closeForm() {
+  document.getElementById("myForm").style.display = "none";
+}
+</script>
+</div>
+
 
     <footer>
     </footer>
