added button to send user to chat area, updated home page, added loading screen verification, added payment option routing, added a page to collect credit card information

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
       <div class ="container">
         <a href="index.html" class="init">
-          <h1>Logo</h1>
+          <h1>Buy Borrow Books</h1>
           <ul class="nav-right">
             <li><a href="browse.html"  class="underline">Browse</a></li>
             <li><a href="listing.html"  class="underline">Listings</a></li>
