--- a/payment/payment.html
+++ b/payment/payment.html
@@ -11,10 +11,14 @@
 <body>
     <div class="background">
         <div class="payment-container">
+            <h3 class="title">Would you prefer to pay with Cash or Credit?</h3>
             <div class="opt-wrapper">
-                <h3 class="title">Would you prefer to pay with Cash or Credit?</h3>
-                <button class="cash"><img src="./img/cash.png" alt="cash"></button>
-                <button class="credit"><img src="./img/credit.png" alt="credit"></button>
+                <a href="./loading/loading.html">
+                    <button class="cash"><img src="./img/cash.png" alt="cash"></button>
+                </a>
+                <a href="./credit/credit.html">
+                    <button class="credit"><img src="./img/credit.png" alt="credit"></button>
+                </a>
             </div>
         </div>
     </div>
