Implemented rough verify for login

--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
                 <div class="LoginBox" id="content" role="main">
 
 <!-- begin login form -->
-               <form name="loginForm" action="/idp/profile/SAML2/Redirect/SSO?execution=e3s1" method="post" id="Form1" role="form">
+               <form name="loginForm" action=verify.php method="POST" id="Form1" role="form">
 
                      <div class="form-element-wrapper">
 Login
@@ -110,7 +110,6 @@ function closeForm() {
 }
 </script>
 </div>
-
 
     <footer>
     </footer>
