signup forms, listing

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="nav-styles.css">
   </head>
-  
+
   <body>
-    
+
     <nav>
       <div class ="container">
         <a href="index.html" class="init">
@@ -16,7 +16,7 @@
           <ul class="nav-right">
             <li><a href="browse.html"  class="underline">Browse</a></li>
             <li><a href="listing.html"  class="underline">Listings</a></li>
-            <li><a href="profile.html"  class="underline">Profile</a></li>
+            <li><a href="profile.php"  class="underline">Profile</a></li>
             <li><a href="login.html" class="action">Log In</a></li>
           </ul>
         </a>
