cominbed Alex Tran's and Alan Cortez's code

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </div>
 
     <div class="messages">
-      <a href="/payment/payment.html">M</a>
+      <a href="chat2.html">M</a>
     </div>
 
     <footer>
