--- a/profile.html
+++ b/profile.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Triple-B</title>
-    <link rel="stylesheet" href="profile-styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="nav-styles.css">
   </head>
   <body>
