--- a/listing.html
+++ b/listing.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Tripple B Listing</title>
-    <link rel="stylesheet" href="listing.css">
     <link rel="stylesheet" href="nav-styles.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="listing.css">
+
   </head>
+  <body>
+    <h1>Listing<h1>
   <nav>
     <div class ="container">
       <a href="index.html" class="init">
@@ -19,61 +23,32 @@
       </a>
     </div>
   </nav>
-  <div class="desktop-1screen">
-  <!-- <div class="flex-col">
-    <div class="nav-bar"></div>
-    <div class="titleroboto-normal-white-40px">This is a Title</div>
-  </div> -->
-  <div class="flex-row">
-    <div class="flex-col-1">
-      <div class="flex-row-1">
-        <h1 class="price">$----.--</h1>
-        <div class="buy-button">
-          <div class="buy">Buy</div>
+  <div class="listing-rectanglecol">
+      <h2>Item Name</h2>
+      <div class="detailsrow">
+        <div class="priceinfocol">
+          <h3>$****.**</h3>
         </div>
-      </div>
-      <div class="condition-container">
-        <div class="condition">Condition:</div>
-        <img class="condition-type" src="condition-type.png" />
-      </div>
-      <div class="descriptionroboto-normal-white-40px">This is a description</div>
-    </div>
-    <div class="flex-col-2">
-      <div class="pictures">
-        <img class="patrick-1" src="patrick-1.png" />
-        <div class="patrick-container">
-          <img class="patrick" src="patrick-3.png" /><img class="patrick" src="patrick-3.png" /><img
-            class="patrick"
-            src="patrick-3.png"
-          /><img class="patrick" src="patrick-3.png" />
-        </div>
-      </div>
-      <div class="flex-row-2">
-        <div class="sellerroboto-normal-white-30px">Seller:</div>
-        <div class="profile-info">
-          <div class="flex-row-3">
-            <div class="overlap-group">
-              <img class="profile-picture" src="profile-picture.png" /><img
-                class="exclude"
-                src="exclude.svg"
-              />
-            </div>
-            <div class="flex-col-3">
-              <div class="nameroboto-normal-white-30px">This is a name</div>
-              <div class="star-rating">
-                <img class="star-1" src="star-1.svg" /><img class="star-2" src="star-1.svg" /><img
-                  class="star-3"
-                  src="star-3.svg"
-                /><img class="star" src="star-1.svg" /><img class="star" src="star-1.svg" />
-              </div>
-            </div>
+        <div class="picturerow">
+          <div class="productpicturecol">
+            <img src="placeholder.jpg" alt="placeholder"
+            width="50"
+            height="50">
+            <img src="placeholder.jpg" alt="placeholder"
+            width="50"
+            height="50">
+            <img src="placeholder.jpg" alt="placeholder"
+            width="50"
+            height="50">
+            <img src="placeholder.jpg" alt="placeholder"
+            width="50"
+            height="50">
           </div>
-          <div class="contact-button">
-            <div class="place">Contact</div>
-          </div>
+          <img src="placeholder.jpg" alt="placeholder"
+          width="200"
+          height="200">
         </div>
       </div>
-    </div>
   </div>
-</div>
+</body>
 </html>
