--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="nav-styles.css">
   </head>
-  
+
   <body>
-    
+
     <nav>
       <div class ="container">
         <a href="index.html" class="init">
-          <h1>Logo</h1>
+          <h1>Buy Borrow Books</h1>
           <ul class="nav-right">
             <li><a href="browse.html"  class="underline">Browse</a></li>
             <li><a href="listing.html"  class="underline">Listings</a></li>
-            <li><a href="profile.html"  class="underline">Profile</a></li>
+            <li><a href="profile.php"  class="underline">Profile</a></li>
             <li><a href="login.html" class="action">Log In</a></li>
           </ul>
         </a>
@@ -94,7 +94,7 @@
     </div>
 
     <div class="messages">
-      <a href="message.html">M</a>
+      <a href="chat2.html">M</a>
     </div>
 
     <footer>
