--- a/chat2.html
+++ b/chat2.html
@@ -119,7 +119,7 @@
 </form>
 
 <p>Back to the <a href="./index.html">Homepage</a>.</p>
-<a href="/payment/payment.html"><button>Ready to buy?</button></a>
+<a href="./payment/payment.html"><button>Ready to buy?</button></a>
 
 <h2></h2>
 
