create a listing page with image and data validation

--- a/listing.html
+++ b/listing.html
@@ -13,7 +13,7 @@
         <ul class="nav-right">
           <li><a href="browse.html"  class="underline">Browse</a></li>
           <li><a href="listing.html"  class="underline">Listings</a></li>
-          <li><a href="profile.html"  class="underline">Profile</a></li>
+          <li><a href="profile.php"  class="underline">Profile</a></li>
           <li><a href="login.html" class="action">Log In</a></li>
         </ul>
       </a>
