my code works lul

--- a/payment/credit/credit.html
+++ b/payment/credit/credit.html
@@ -40,7 +40,7 @@
         </div>
     </div>
     <script>
-        let loading = "http://127.0.0.1:5500/payment/loading/loading.html";
+        let loading = "../loading/loading.html";
 
         function sendToLoading() {
             window.location = loading;
