--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <a href="index.html" class="init">
           <h1>Buy Borrow Books</h1>
           <ul class="nav-right">
-            <li><a href="browse.html"  class="underline">Browse</a></li>
-            <li><a href="listing.html"  class="underline">Listings</a></li>
-            <li><a href="profile.php"  class="underline">Profile</a></li>
+            <li><a href="browse.html"  class="item">Browse</a></li>
+            <li><a href="listing.html"  class="item">Listings</a></li>
+            <li><a href="profile.php"  class="item">Profile</a></li>
             <li><a href="login.html" class="action">Log In</a></li>
           </ul>
         </a>
@@ -28,27 +28,23 @@
     <div class="hero">
         <h1>Welcome</h1>
     </div>
+
+    
     <!-- First View -->
     <div class="category-section">
       <div class="mix-grid">
         <div class="nested">
-          <h3>Genre 1</h3>
-          <p>Lorem ipsum dolor sit amet.</p>
-          <p>Lorem ipsum dolor sit amet.</p>
-          <p>Lorem ipsum dolor sit amet.</p>
+          <h3>New Book</h3>
+          <p>image</p>
           <p>Lorem ipsum dolor sit amet.</p>
         </div>
         <div class="nested">
           <h3>Genre 1</h3>
           <p>Lorem ipsum dolor sit amet.</p>
           <p>Lorem ipsum dolor sit amet.</p>
-          <p>Lorem ipsum dolor sit amet.</p>
-          <p>Lorem ipsum dolor sit amet.</p>
         </div>
         <div class="nested">
           <h3>Genre 1</h3>
-          <p>Lorem ipsum dolor sit amet.</p>
-          <p>Lorem ipsum dolor sit amet.</p>
           <p>Lorem ipsum dolor sit amet.</p>
           <p>Lorem ipsum dolor sit amet.</p>
         </div>
@@ -58,43 +54,101 @@
     <!-- List sections -->
 
     <div class="list-section">
-      <h2>Computer Science Books</h2>
+      <div class="list-title">
+        <h2>🖥️ Popular Computer Science Books 💻</h2>
+      </div>
       <div class="scroller-grid">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
+        <!-- cs book 1 -->
+        <a href="test.php?tupleID=9" class="book-cont">
+          <img src="./uploads/204169227771iTDxDY7CL.jpg" alt="image">
+          <p>Price: 100<br>Condition: Excellent</p>
+          <p class="smol-text">click to learn more...</p>
+        </a>
+        <!-- cs book 2 -->
+        <a href="test.php?tupleID=12" class="book-cont">
+          <img src="./uploads/90625752581Uec7eLvaL.jpg" alt="image">
+          <p>Price: 200<br>Condition: Very Poor</p>
+          <p class="smol-text">click to learn more...</p>
+        </a>
+        <!-- cs book 3 -->
+        <a href="test.php?tupleID=13" class="book-cont">
+          <img src="./uploads/411ejyE8obL._SX377_BO1,204,203,200_.jpg" alt="image">
+          <p>Price: 0<br>Condition: Fair</p>
+          <p class="smol-text">click to learn more...</p>
+        </a>
+        <!-- cs book 4 -->
+        <a href="test.php?tupleID=10" class="book-cont">
+          <img src="./uploads/12125434891JLJ+dZOUL.jpg" alt="image">
+          <p>Price: 400<br>Condition: Good</p>
+          <p class="smol-text">click to learn more...</p>
+        </a>
       </div>
     </div>
 
     <div class="list-section">
-      <h2>Chemistry Books</h2>
-      <div class="scroller-grid">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
+      <div class="list-title">
+        <h2>🧪 Popular Chemistry Books ⚗️</h2>
       </div>
+      <div class="scroller-grid">
+        <!-- chem book 1 -->
+        <a href="listing.html" class="book-cont">
+          <img src="./uploads/fchem.jpg" alt="image">
+          <p>Price: 275<br>Condition: Fair</p>
+          <p class="smol-text">click to learn more...</p>
+        </a>
+        <!-- chem book 2 -->
+        <a href="listing.html" class="book-cont">
+          <img src="./uploads/ochem.jpg" alt="image">
+          <p>Price: 600<br>Condition: Excellent</p>
+          <p class="smol-text">click to learn more...</p>
+        </a>
+        <!-- chem book 3 -->
+        <a href="listing.html" class="book-cont">
+          <img src="./uploads/bchem.jpg" alt="image">
+          <p>Price: 350<br>Condition: Good</p>
+          <p class="smol-text">click to learn more...</p>
+        </a>
+        <!-- chem book 4 -->
+        <a href="listing.html" class="book-cont">
+          <img src="./uploads/chem book.jpg" alt="image">
+          <p>Price: 828<br>Condition: Good</p>
+          <p class="smol-text">click to learn more...</p>
+        </a></div>
     </div>
 
     <div class="list-section">
-      <h2>Geology Books</h2>
-      <div class="scroller-grid">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure saepe reprehenderit velit. Ipsa porro aliquid adipisci quaerat veniam corrupti, non nulla recusandae veritatis odit illo laborum quibusdam nobis esse quam.</p>
+      <div class="list-title">
+        <h2>🌎 Popular Geology Books 🌍</h2>
       </div>
+      <div class="scroller-grid">
+        <!-- geo book 1 -->
+        <a href="listing.html" class="book-cont">
+          <img src="./uploads/51e7lVxA-ZL._SL500_.jpg" alt="image">
+          <p>Price: 123<br>Condition: Poor</p>
+          <p class="smol-text">click to learn more...</p>
+        </a>
+        <!-- geo book 2 -->
+        <a href="listing.html" class="book-cont">
+          <img src="./uploads/51el5oz411L.jpg" alt="image">
+          <p>Price: 452<br>Condition: Excellent</p>
+          <p class="smol-text">click to learn more...</p>
+        </a>
+        <!-- geo book 3 -->
+        <a href="listing.html" class="book-cont">
+          <img src="./uploads/613OsdBOPXL.jpg" alt="image">
+          <p>Price: 253452<br>Condition: Very Poor</p>
+          <p class="smol-text">click to learn more...</p>
+        </a>
+        <!-- geo book 4 -->
+        <a href="listing.html" class="book-cont">
+          <img src="./uploads/9780393667523_300.jpeg" alt="image">
+          <p>Price: 34343<br>Condition: Poor</p>
+          <p class="smol-text">click to learn more...</p>
+        </a></div>
     </div>
 
     <div class="messages">
-      <a href="chat2.html">M</a>
+      <a href="chat2.html">👋</a>
     </div>
 
     <footer>
