finished first iteration of home page, need to check for bugs late

--- a/contacts.html
+++ b/contacts.html
@@ -9,7 +9,7 @@
     <h1>Tripple B, CS students save the bookstore</h1>
     <nav>
       <div class ="container">
-        <a href="index.html" class="init">
+        <a href="index.php" class="init">
           <h1>Logo</h1>
           <ul class="nav-right">
             <li><a href="browse.html"  class="underline">Browse</a></li>
