--- a/browse.html
+++ b/browse.html
@@ -48,7 +48,7 @@
     <!-- We'll first be needing to add items to the nav bar (So what we plan on doing this first sprint meeting) -->
     <nav>
         <div class ="container">
-          <a href="index.html" class="init">
+          <a href="index.php" class="init">
             <h1>Logo</h1>
             <ul class="nav-right">
               <li><a href="browse.html"  class="underline">Browse</a></li>
