--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <nav>
       <div class ="container">
-        <a href="index.html" class="init">
+        <a href="index.php" class="init">
           <h1>Buy Borrow Books</h1>
           <ul class="nav-right">
             <li><a href="browse.html"  class="item">Browse</a></li>
@@ -26,129 +26,7 @@
 
     <!-- hero -->
     <div class="hero">
-        <h1>Welcome</h1>
-    </div>
-
-    
-    <!-- First View -->
-    <div class="category-section">
-      <div class="mix-grid">
-        <div class="nested">
-          <h3>New Book</h3>
-          <p>image</p>
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-        <div class="nested">
-          <h3>Genre 1</h3>
-          <p>Lorem ipsum dolor sit amet.</p>
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-        <div class="nested">
-          <h3>Genre 1</h3>
-          <p>Lorem ipsum dolor sit amet.</p>
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-      </div>
-    </div>
-
-    <!-- List sections -->
-
-    <div class="list-section">
-      <div class="list-title">
-        <h2>🖥️ Popular Computer Science Books 💻</h2>
-      </div>
-      <div class="scroller-grid">
-        <!-- cs book 1 -->
-        <a href="test.php?tupleID=9" class="book-cont">
-          <img src="./uploads/204169227771iTDxDY7CL.jpg" alt="image">
-          <p>Price: 100<br>Condition: Excellent</p>
-          <p class="smol-text">click to learn more...</p>
-        </a>
-        <!-- cs book 2 -->
-        <a href="test.php?tupleID=12" class="book-cont">
-          <img src="./uploads/90625752581Uec7eLvaL.jpg" alt="image">
-          <p>Price: 200<br>Condition: Very Poor</p>
-          <p class="smol-text">click to learn more...</p>
-        </a>
-        <!-- cs book 3 -->
-        <a href="test.php?tupleID=13" class="book-cont">
-          <img src="./uploads/411ejyE8obL._SX377_BO1,204,203,200_.jpg" alt="image">
-          <p>Price: 0<br>Condition: Fair</p>
-          <p class="smol-text">click to learn more...</p>
-        </a>
-        <!-- cs book 4 -->
-        <a href="test.php?tupleID=10" class="book-cont">
-          <img src="./uploads/12125434891JLJ+dZOUL.jpg" alt="image">
-          <p>Price: 400<br>Condition: Good</p>
-          <p class="smol-text">click to learn more...</p>
-        </a>
-      </div>
-    </div>
-
-    <div class="list-section">
-      <div class="list-title">
-        <h2>🧪 Popular Chemistry Books ⚗️</h2>
-      </div>
-      <div class="scroller-grid">
-        <!-- chem book 1 -->
-        <a href="listing.html" class="book-cont">
-          <img src="./uploads/fchem.jpg" alt="image">
-          <p>Price: 275<br>Condition: Fair</p>
-          <p class="smol-text">click to learn more...</p>
-        </a>
-        <!-- chem book 2 -->
-        <a href="listing.html" class="book-cont">
-          <img src="./uploads/ochem.jpg" alt="image">
-          <p>Price: 600<br>Condition: Excellent</p>
-          <p class="smol-text">click to learn more...</p>
-        </a>
-        <!-- chem book 3 -->
-        <a href="listing.html" class="book-cont">
-          <img src="./uploads/bchem.jpg" alt="image">
-          <p>Price: 350<br>Condition: Good</p>
-          <p class="smol-text">click to learn more...</p>
-        </a>
-        <!-- chem book 4 -->
-        <a href="listing.html" class="book-cont">
-          <img src="./uploads/chem book.jpg" alt="image">
-          <p>Price: 828<br>Condition: Good</p>
-          <p class="smol-text">click to learn more...</p>
-        </a></div>
-    </div>
-
-    <div class="list-section">
-      <div class="list-title">
-        <h2>🌎 Popular Geology Books 🌍</h2>
-      </div>
-      <div class="scroller-grid">
-        <!-- geo book 1 -->
-        <a href="listing.html" class="book-cont">
-          <img src="./uploads/51e7lVxA-ZL._SL500_.jpg" alt="image">
-          <p>Price: 123<br>Condition: Poor</p>
-          <p class="smol-text">click to learn more...</p>
-        </a>
-        <!-- geo book 2 -->
-        <a href="listing.html" class="book-cont">
-          <img src="./uploads/51el5oz411L.jpg" alt="image">
-          <p>Price: 452<br>Condition: Excellent</p>
-          <p class="smol-text">click to learn more...</p>
-        </a>
-        <!-- geo book 3 -->
-        <a href="listing.html" class="book-cont">
-          <img src="./uploads/613OsdBOPXL.jpg" alt="image">
-          <p>Price: 253452<br>Condition: Very Poor</p>
-          <p class="smol-text">click to learn more...</p>
-        </a>
-        <!-- geo book 4 -->
-        <a href="listing.html" class="book-cont">
-          <img src="./uploads/9780393667523_300.jpeg" alt="image">
-          <p>Price: 34343<br>Condition: Poor</p>
-          <p class="smol-text">click to learn more...</p>
-        </a></div>
-    </div>
-
-    <div class="messages">
-      <a href="chat2.html">👋</a>
+        <h1>Error Not Connected to Database</h1>
     </div>
 
     <footer>
