--- a/listing.html
+++ b/listing.html
@@ -12,7 +12,7 @@
     <h1>Listing<h1>
   <nav>
     <div class ="container">
-      <a href="index.html" class="init">
+      <a href="index.php" class="init">
         <h1>Logo</h1>
         <ul class="nav-right">
           <li><a href="browse.html"  class="underline">Browse</a></li>
