created successful login/signout button on nav bar

--- a/payment/loading/loading.html
+++ b/payment/loading/loading.html
@@ -12,14 +12,14 @@
     <div class="background">
         <div class="loading-container">
             <div class="loading">
-                <div class="word1 active">
-                    <h3>Buy</h3>
+                <div class="word word1 active">
+                    <h3>💵</h3>
                 </div>
-                <div class="word2">
-                    <h3>Borrow</h3>
+                <div class="word word2">
+                    <h3>🤝</h3>
                 </div>
-                <div class="word3">
-                    <h3>Books!</h3>
+                <div class="word word3">
+                    <h3>📙</h3>
                 </div>
             </div>
             <div class="success hidden">
