--- a/profile.html
+++ b/profile.html
@@ -10,165 +10,17 @@
     <h1>Your Profile</h1>
     <nav>
       <div class ="container">
-        <a href="index.php" class="init">
-          <h1>Logo</h1>
+        <a href="index.php" class="nav-left"><h1>Buy Borrow Books</h1></a>
           <ul class="nav-right">
-            <li><a href="browse.html"  class="underline">Browse</a></li>
-            <li><a href="listing.html"  class="underline">Listings</a></li>
-            <li><a href="profile.html"  class="underline">Profile</a></li>
+            <li class="item"><a href="browse.html"  ><ion-icon name="search-outline"></ion-icon></a></li>
+            <li  class="item"><a href="profile.html" ><ion-icon name="person-outline"></ion-icon></ion-icon></a></li>
             <li><a href="login.html" class="action">Log In</a></li>
           </ul>
-        </a>
       </div>
     </nav>
 
-
-    <div class="three-cards">
-      <div class="card">
-        <!-- redirects to home page for the time being -->
-        <a href="index.html">
-          <!-- Licensed under Creative Commons CC-BY Pixabay -->
-          <img src="images/order-icon.png" alt="Order Icon" class="icon-image" align="left">
-        </a>
-        <div class="card-headings">
-          <h2>Orders</h2>
-        </div>
-        <!-- Unordered List displaying all the choices user's have. -->
-        <ul style="list-style-type:none">
-          <!-- redirects to home page for the time being -->
-          <a href="index.html">
-            <li>Option 1</li>
-          </a>
-          <a href="index.html">
-            <li>Option 2</li>
-          </a>
-          <a href="index.html">
-            <li>Option 3</li>
-          </a>
-        </ul>
-      </div>
-      <div class="card">
-        <!-- redirects to home page for the time being -->
-        <a href="index.html">
-          <!-- Licensed under Creative Commons CC-BY Pixabay -->
-          <img src="images/payment-icon.png" alt="Payment Icon" class="icon-image" align="left">
-        </a>
-        <div class="card-headings">
-          <h2>Payment Details</h2>
-        </div>
-        <!-- Unordered List displaying all the choices user's have. -->
-        <ul style="list-style-type:none">
-          <!-- redirects to home page for the time being -->
-          <a href="index.html">
-            <li>Option 1</li>
-          </a>
-          <a href="index.html">
-            <li>Option 2</li>
-          </a>
-          <a href="index.html">
-            <li>Option 3</li>
-          </a>
-        </ul>
-      </div>
-      <div class="card">
-        <!-- redirects to home page for the time being -->
-        <a href="index.html">
-          <!-- Licensed under Creative Commons CC-BY Pixabay -->
-          <img src="images/messages-icon.png" alt="Messages Icon" class="icon-image" align="left">
-        </a>
-        <div class="card-headings">
-          <h2>Messages</h2>
-        </div>
-        <!-- Unordered List displaying all the choices user's have. -->
-        <ul style="list-style-type:none">
-          <!-- redirects to home page for the time being -->
-          <a href="index.html">
-            <li>Option 1</li>
-          </a>
-          <a href="index.html">
-            <li>Option 2</li>
-          </a>
-          <a href="index.html">
-            <li>Option 3</li>
-          </a>
-        </ul>
-      </div>
+    <div class="htmlError-cont">
+      <p>currently not logged in</p>
     </div>
-
-    <div class="three-cards">
-      <div class="card">
-        <!-- redirects to home page for the time being -->
-        <a href="index.html">
-          <!-- Licensed under Creative Commons CC-BY Pixabay -->
-          <img src="images/information-icon.png" alt="Information Icon" class="icon-image" align="left">
-        </a>
-        <div class="card-headings">
-          <h2>Customer Service</h2>
-        </div>
-        <!-- Unordered List displaying all the choices user's have. -->
-        <ul style="list-style-type:none">
-          <!-- redirects to home page for the time being -->
-          <a href="index.html">
-            <li>Option 1</li>
-          </a>
-          <a href="index.html">
-            <li>Option 2</li>
-          </a>
-          <a href="index.html">
-            <li>Option 3</li>
-          </a>
-        </ul>
-      </div>
-      <div class="card">
-        <!-- redirects to home page for the time being -->
-        <a href="index.html">
-          <!-- Licensed under Creative Commons CC-BY Pixabay -->
-          <img src="images/notification-icon.png" alt="Notifcation Bell Icon" class="icon-image" align="left">
-        </a>
-        <div class="card-headings">
-          <h2>Notification Settings</h2>
-        </div>
-        <!-- Unordered List displaying all the choices user's have. -->
-        <ul style="list-style-type:none">
-          <!-- redirects to home page for the time being -->
-          <a href="index.html">
-            <li>Option 1</li>
-          </a>
-          <a href="index.html">
-            <li>Option 2</li>
-          </a>
-          <a href="index.html">
-            <li>Option 3</li>
-          </a>
-        </ul>
-      </div>
-      <div class="card">
-        <!-- redirects to home page for the time being -->
-        <a href="index.html">
-          <!-- Licensed under Creative Commons CC-BY Pixabay -->
-          <img src="images/security-icon.png" alt="Security Icon" class="icon-image" align="left">
-        </a>
-        <div class="card-headings">
-          <h2>Account Settings</h2>
-        </div>
-        <!-- Unordered List displaying all the choices user's have. -->
-        <ul style="list-style-type:none">
-          <!-- redirects to home page for the time being -->
-          <a href="index.html">
-            <li>Update Email</li>
-          </a>
-          <a href="index.html">
-            <li>Update Password</li>
-          </a>
-          <a href="index.html">
-            <li>Option 3</li>
-          </a>
-        </ul>
-      </div>
-    </div>
-
-    <footer>
-
-    </footer>
   </body>
 </html>
